Fixed #255411 - Account Settings - Edit Public Profile - Browse Button Is Cropped

--- a/app/assets/stylesheets/accounts.css.sass
+++ b/app/assets/stylesheets/accounts.css.sass
@@ -199,7 +199,7 @@
     margin-left: 10px
     padding: 6px 5px
     width: 336px
-    height: 16px
+    height: 24px
   .profile-pic
     margin: 10px
   .txt
@@ -209,3 +209,4 @@
     height: 16px
   .display
     padding: 6px 5px
+
